<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"

    android:background="#c2cefb"
    tools:ignore="ExtraText">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/final3">

        </TextView>
    </LinearLayout>
    />

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="51dp"
        android:inputType="text"
        android:hint="@string/email"
        android:textColorHint="#01579b"/>

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/senha"
        android:textColorHint="#01579b"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:padding="20dp">


        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login"
            android:onClick="Logar"
            android:textColor="#01579b"
            android:backgroundTint="#f16b41"
            tools:ignore="UnusedAttribute" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/criar_conta"
            android:onClick="criarConta"
            android:textSize="15sp"
            android:textColor="#f16b41" />

        <View
            android:layout_width="30dp"
            android:layout_height="1dp"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/esqueci_senha"
            android:textSize="15sp"
            android:textColor="#f16b41" />

    </LinearLayout>

</LinearLayout>